--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "vue": "^1.0.24",
+    "vue-resource": "^0.7.2",
     "vue-router": "^0.7.13",
     "yargs": "^4.7.1"
   },
