--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue": "^1.0.24",
     "vue-resource": "^0.7.2",
     "vue-router": "^0.7.13",
+    "vue-validator": "^2.1.3",
     "yargs": "^4.7.1"
   },
   "scripts": {
