--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "vue": "^1.0.24",
+    "vue-env": "^0.1.1",
     "vue-resource": "^0.7.2",
     "vue-router": "^0.7.13",
     "vue-validator": "^2.1.3",
