--- a/package.json
+++ b/package.json
@@ -2,19 +2,29 @@
   "name": "bootstrap",
   "version": "1.0.0",
   "description": "bootstrap",
-  "main": "index.js",
+  "main": "app/app.js",
   "dependencies": {
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "browser-sync": "^2.12.12",
+    "gulp": "^3.9.1",
+    "gulp-clean-css": "^2.0.9",
+    "gulp-environments": "^0.1.1",
+    "gulp-watch-less": "^1.0.1",
     "babel": "^6.5.2",
     "babel-preset-es2015": "^6.9.0",
     "babelify": "^7.3.0",
     "browserify": "^13.0.1",
-    "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-batch": "^1.0.5",
     "gulp-if": "^2.0.1",
     "gulp-less": "^3.1.0",
     "gulp-minify-css": "^1.2.4",
-    "gulp-server-livereload": "^1.8.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
     "gulp-watch": "^4.3.6",
@@ -29,18 +39,5 @@
     "vue-router": "^0.7.13",
     "vue-validator": "^2.1.3",
     "yargs": "^4.7.1"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "browser-sync": "^2.12.12",
-    "gulp": "^3.9.1",
-    "gulp-clean-css": "^2.0.9",
-    "gulp-environments": "^0.1.1",
-    "gulp-watch-less": "^1.0.1",
-    "gulp-webserver": "^0.9.1"
   }
 }
