--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "bootstrap",
   "main": "app/app.js",
   "dependencies": {
+    "vue-seo": "^0.1.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,22 +12,24 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.12.12",
-    "gulp": "^3.9.1",
-    "gulp-clean-css": "^2.0.9",
-    "gulp-environments": "^0.1.1",
-    "gulp-watch-less": "^1.0.1",
     "babel": "^6.5.2",
     "babel-preset-es2015": "^6.9.0",
     "babelify": "^7.3.0",
+    "browser-sync": "^2.12.12",
     "browserify": "^13.0.1",
+    "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-batch": "^1.0.5",
+    "gulp-clean-css": "^2.0.9",
+    "gulp-environments": "^0.1.1",
     "gulp-if": "^2.0.1",
     "gulp-less": "^3.1.0",
+    "gulp-minify": "0.0.12",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
+    "gulp-vueify": "0.0.3",
     "gulp-watch": "^4.3.6",
+    "gulp-watch-less": "^1.0.1",
     "html-browserify": "0.0.6",
     "html-loader": "^0.4.3",
     "node-lessify": "^0.1.4",
@@ -37,6 +40,7 @@
     "vue-resource": "^0.7.2",
     "vue-router": "^0.7.13",
     "vue-validator": "^2.1.3",
+    "vueify": "^8.5.4",
     "yargs": "^4.7.1"
   }
 }
